sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:13: error: value IndexOf is not a member of Array[Int]
  return crepes.IndexOf(crepes.max)
                ^