sort.pancake.BasicPancake.scala.code
def getMax(n:Int):Int = {
  
  //Renvoie l'indice de la plus grosse crèpe parmis les n premières
  
  var crepes = new Array[Int](n)
  for (c <- 0 to n-1) {
    
    crepes(c) = getRayonCrepe(c)
    
  }
  
  return crepes.IndexOf(crepes.max)
  
}

def solve() {
  
  for (n <- 0 to getTaillePile()-1) {
    
    var plusGrosse = getMax(getTaillePile()-n)
    retourne(plusGrosse+1)
    retourne(getTaillePile())
    
  }
  
}